--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,9 @@
 {
-  "name": "my-render-service",
+  "name": "my-simple-static-site",
   "version": "1.0.0",
-  "description": "A simple web service deployed on Render.",
-  "main": "server.js",
+  "description": "A basic index.html file deployed as a static site.",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "node",
-    "express",
-    "render"
-  ],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2"
+    "start": "echo 'No server needed for static site'",
+    "build": "echo 'No build step required'"
   }
 }
